// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateComponentHObjCpp can generate for 'ArrayPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTArrayPropsNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'BooleanPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTBooleanPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'ColorPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTColorPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'DimensionPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTDimensionPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'EdgeInsetsPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTEdgeInsetsPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'EnumPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTEnumPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'EventNestedObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTEventNestedObjectPropsNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'EventPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTEventPropsNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'FloatPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTFloatPropsNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'ImagePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTImagePropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'IntegerPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTIntegerPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'InterfaceOnlyNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTInterfaceOnlyNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'MixedPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTMixedPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'MultiNativePropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTMultiNativePropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'NoPropsNoEventsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTNoPropsNoEventsNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'ObjectPropsNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTObjectPropsNativeComponentViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'PointPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTPointPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;

exports[`GenerateComponentHObjCpp can generate for 'StringPropNativeComponent.js' using types under single namespace 1`] = `
Object {
  "RCTComponentViewHelpers.h": "/**
* This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
*
* Do not edit this file as changes may cause incorrect behavior and will be lost
* once the code is regenerated.
*
* @generated by codegen project: GenerateComponentHObjCpp.js
*/

#import <Foundation/Foundation.h>
#import <React/RCTDefines.h>
#import <React/RCTLog.h>

NS_ASSUME_NONNULL_BEGIN

@protocol RCTStringPropNativeComponentViewViewProtocol <NSObject>

@end

NS_ASSUME_NONNULL_END",
}
`;
